--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "aiofiles>=24.1.0",
+    "docx>=0.2.4",
     "docx2md>=1.0.3",
     "fastapi>=0.116.0",
     "google-genai>=1.25.0",
@@ -20,6 +21,9 @@ dependencies = [
     "llama-index-postprocessor-cohere-rerank>=0.4.0",
     "llama-index-readers-file>=0.4.11",
     "llama-index-storage-chat-store-mongo>=0.1.0",
+    "llama-index-storage-chat-store-redis>=0.4.1",
+    "llama-index-storage-docstore-mongodb>=0.3.0",
+    "llama-index-storage-index-store-mongodb>=0.4.0",
     "llama-index-vector-stores-milvus>=0.8.5",
     "mongo>=0.2.0",
     "motor>=3.7.1",
@@ -32,6 +36,7 @@ dependencies = [
     "python-docx>=1.2.0",
     "python-dotenv>=1.1.1",
     "python-magic>=0.4.27",
+    "redis>=6.2.0",
     "streamlit>=1.46.1",
     "tqdm>=4.67.1",
     "uvicorn[standard]>=0.35.0",
